<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LayoutBackground"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/ImageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />


    <RelativeLayout
        android:id="@+id/CardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageLogo"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/CardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/loginEditText"
                    style="@style/EditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Layout_Edit_text"
                    android:layout_weight="1"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:padding="12dp"
                    android:selectAllOnFocus="false"
                    android:textSize="12sp"
                    android:typeface="normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/EditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/Layout_Edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textSize="12sp"
                    android:typeface="normal" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/CardViewLogin"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/registerButton"
            style="@style/ButtonSkyBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="3dp"
            android:onClick="onClick"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <include layout="@layout/layout_loading" />

</RelativeLayout>
