<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.com.dev420.router_bar.activities.InsertPubActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/vBarName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/pubNameEditText"
                style="@style/LoginSignUp1Input"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/vBarName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="8dp" />

            <EditText
                android:id="@+id/pubPhoneEditText"
                style="@style/LoginSignUp1Input"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/vBarvPhone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/pubNameEditText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/vBarvPhone"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/pubHourOpenTextView"
                style="@style/Ecommerce24Input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/HourBase"
                android:padding="12dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubPhoneEditText" />

            <TextView
                android:id="@+id/pubHourCloseTextView"
                style="@style/Ecommerce24Input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/HourBase"
                android:padding="12dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/pubHourOpenTextView"
                app:layout_constraintTop_toBottomOf="@+id/pubPhoneEditText" />

            <CheckBox
                android:id="@+id/pubDeliveryCheckBox"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="Delivery"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/pub24CheckBox"
                app:layout_constraintTop_toBottomOf="@+id/pubPhoneEditText"
                tools:ignore="HardcodedText,SmallSp" />

            <CheckBox
                android:id="@+id/pub24CheckBox"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="24 Horas"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubPhoneEditText"
                tools:ignore="HardcodedText,SmallSp" />

            <ImageButton
                android:id="@+id/searchLocImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_search_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubHourOpenTextView"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/pubLatitudeTextView"
                style="@style/Ecommerce24Input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/vLatitudeLabel"
                android:padding="12dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/searchLocImageView"
                app:layout_constraintStart_toEndOf="@+id/searchLocImageView"
                app:layout_constraintTop_toTopOf="@+id/searchLocImageView" />

            <TextView
                android:id="@+id/pubLongitudeTextView"
                style="@style/Ecommerce24Input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/vLongitudeLabel"
                android:padding="12dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/searchLocImageView"
                app:layout_constraintStart_toEndOf="@+id/pubLatitudeTextView"
                app:layout_constraintTop_toTopOf="@+id/searchLocImageView" />

            <ImageView
                android:id="@+id/pubCameraImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:src="@drawable/ic_camera_alt_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchLocImageView"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/pubImageImageView"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#F2F2F2"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubCameraImageView"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/registerButton"
                style="@style/ButtonBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/vRegisterBar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pubImageImageView" />

        </android.support.constraint.ConstraintLayout>


        <include
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="800dp" />

    </RelativeLayout>

</ScrollView>